# shadowedvaca-site

./: .env.example  .gitignore  ADMIN-SETUP-GUIDE.md  CLAUDE.md  CNAME  DISCORD-DEVELOPER-MODE.md  Dockerfile  RAID-HELPER-API-KEY.md  README.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  google-apps-script.js  index.html  login.html  meandering-muck-privacy.html  meandering-muck-support.html  meandering-muck.html  patt-config.json  patt-raid-admin.html  pyproject.toml  raid-admin.html  register.html  requirements.txt  roster-view.html  roster.html  style.css  support-form-google-web-app.js  test.html
.claude/: settings.local.json
.github/workflows/: deploy-dev.yml  deploy-test.yml  deploy.yml
data/: announcements.json  links.json  profile.json  projects.json
deploy/nginx/: dev.shadowedvaca.com.conf  shadowedvaca.com.conf  test.shadowedvaca.com.conf
deploy/scripts/: create_schema.sql
deploy/systemd/: shadowedvaca.service
docs/: IMPLEMENTATION-PLAN.md  MONITORING-CLAUDE.md  MONITORING-PLAN.md
hub/: index.html
hub/feedback/: index.html
monitoring/: README.md  requirements.txt  run_health_check.py
reference/: PHASE_F2_PATT_CLIENT.md  SV_COMMON_AUDIT_IMPLEMENTATION.md  SV_COMMON_USER_MANAGEMENT.md  book-club-voting-system-concept.md  git-cicd-workflow.md  ideation-assignment-phase1-db.md  ideation-assignment-phase2-model.md  mockup-v3-reference.html  shadowedvaca-ideation-board-plan.md  sv-tools-ideas-api.md
scripts/: validate_data.py
tests/: conftest.py  test_feedback_ingest.py  test_feedback_read.py
(+56 files in other folders)
