[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shadowedvaca-site"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["packages*"]
